# caf-analysis-01-actor-model

./: ANALYSIS.md  README.md
demo/: CMakeLists.txt  README.md  caf-application.conf  main.cpp
diagrams/: 01-actor-lifecycle.excalidraw  02-message-delivery.excalidraw  03-scheduler-loop.excalidraw
